@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2011-02-16 (SVN):
+    * w32stuff/dxsdk: update _mingw_dxhelper.h from mingw-w64 svn repo.
+
+2011-02-16 (SVN):
     * bgmusic.c: drop support for track<nn> music file search. change the
       music file search method to prioritize searchpath order as opposed
       to preferred file format order. add support for -noextmusic command
